data/derived/fa15/progs/unify/prog2148.ml.out
Characters 72-73:
  if b = true then wwhile (f, x)
                              ^
Error: This expression has type 'a -> 'b * bool
       but an expression was expected of type bool
